# electricity-demand-forecast

./: .gitignore  TODO.md  api-test.py  config.toml  forecast.py  ingest_eia_demand.py  ingest_ng_storage.py  main.py  models.py  pyproject.toml
analysis/: analysis.py  eda.py
